<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#70C0FF"
    tools:context="com.example.android.helloandroid.MainActivity">

    <LinearLayout
        android:layout_marginTop="40dp"
        android:paddingLeft="25dp"
        android:background="#FFFFFF"
        android:paddingRight="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/udacity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/uda2_new"
            android:scaleType="centerCrop"/>

        <ImageView
            android:contentDescription="@string/udacity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/uda1_new"
            android:scaleType="centerCrop"/>

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/udacity"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address1"
        android:layout_marginTop="14dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address2"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="6dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_marginTop="14dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="6dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:layout_marginTop="14dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="6dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mediaQ"
        android:layout_marginTop="14dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="6dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supportQ"
        android:layout_marginTop="14dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="6dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        />


</LinearLayout>
